# expense-buddy

./: .gitignore  .prettierignore  .prettierrc  ARCHITECTURE.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  TERMS.md  app.config.js  app.json  babel.config.js  eas.json  eslint.config.mjs  i18n.ts  jest-setup.ts  jest.config.js  metro.config.js  package.json  store.config.json  tamagui-web.css  tamagui.config.ts  test_output.txt  test_output_2.txt  tsconfig.base.json  tsconfig.json
.changeset/: README.md  all-phases-combined.md  bold-clocks-give.md  breezy-boats-jam.md  bumpy-candles-listen.md  calm-kids-confirm.md  clean-socks-wink.md  config.json  cyan-months-shout.md  dashboard-sync-and-import.md  day-flashlist-layout-hint.md  day-flashlist-remove-dead-analytics.md  derived-expense-data-provider.md  dismiss-notification-and-icon-buttons.md  fair-apples-juggle.md  fair-camels-warn.md  five-cameras-smoke.md  funky-games-return.md  fuzzy-bags-tie.md  gold-terms-swim.md  good-meteors-feel.md  good-peaches-warn.md  green-eagles-breathe.md  green-pens-appear.md  honest-bikes-float.md  hot-steaks-switch.md  khaki-nails-beg.md  language-defaults-load-more.md  late-hounds-compare.md  loud-monkeys-sleep.md  lucky-socks-kiss.md  perf-render-and-store-cleanups.md  plain-bikes-pump.md  port-ui-changes.md  real-beans-notice.md  render-hotspot-cleanups.md  review-fixes.md  salty-queens-switch.md  seven-roses-confirm.md  silent-teachers-peel.md  (+12 more)
.github/: FUNDING.yml  PLAY_STORE_LISTING.md  PULL_REQUEST_TEMPLATE.md  RELEASE.md
app/: +html.tsx  +not-found.tsx  _layout.tsx  filters.tsx  modal.tsx
components/: CurrentToast.tsx  NotificationStack.tsx  Provider.tsx  SyncIndicator.tsx
constants/: app-config.ts  categories.ts  category-colors.ts  category-icons.ts  default-categories.ts  payment-method-colors.ts  payment-methods.ts  runtime-config.ts  theme-colors.ts  ui-tokens.ts
context/: DefaultPaymentMethodPreselection.test.ts  ExpenseContext.tsx  SettingsContext.test.ts  SettingsContext.tsx  notification-context.tsx  sync-status-context.tsx
decisions/: adr-001-xstate-sync-machine.md  adr-002-regex-first-sms-import.md  adr-003-on-device-ml-sms-categorization.md  adr-003-review-first-local-only-sms-staging.md  adr-004-android-only-scope-and-play-permission-gate.md  adr-004-review-first-local-only-sms-staging.md  adr-005-android-only-scope-and-play-permission-gate.md  adr-005-background-sms-alerts.md  adr-006-background-sms-alerts.md  adr-006-native-owned-sms-review-queue.md  adr-007-device-logging.md  adr-007-native-owned-sms-review-queue.md  adr-008-device-logging.md  adr-009-multi-provider-sync-and-google-drive.md  proposal-multi-provider-sync-and-google-drive.md  proposal-on-device-ml-sms-categorization.md
docs/: ANDROID_PLATFORM.md  ML_HYBRID_PARSER.md  ML_SMS_PARSER.md  SMS_IMPORT_IMPLEMENTATION.md  android-phone-smoke-test.md
hooks/: changelog-gating.ts  index.ts  (+23 more)
ml/training/: README.md  convert_to_tflite.py  pyproject.toml  requirements.txt
ml/training/training/: __init__.py  convert_to_tflite.py  export_vocab.py  prepare_data.py  train.py
tools/sms-ml/: README.md  pyproject.toml
tools/sms-ml/data/additional/: jp_hi_sms_dataset.jsonl  multilocale_sms.jsonl  synthetic_sms_dataset.jsonl
tools/sms-ml/data/labels/: README.md  seed-label-queue.csv
tools/sms-ml/data/normalized/: README.md  seed-augmented-summary.json  seed-augmented-train.jsonl  seed-augmented-val.jsonl  seed-summary.json  seed-train.jsonl  seed-val.jsonl
tools/sms-ml/data/reference/: README.md  seed-summary.json  seed-train.json  seed-val.json
tools/sms-ml/docs/: model-architectures.md  public-sources.md  reference.md  training.md
tools/sms-ml/scripts/: apply_seed_labels.py  benchmark_seed_current_regex.py  benchmark_seed_litert.py  benchmark_seed_litert_attention.py  benchmark_seed_litert_embed.py  benchmark_seed_litert_embed_augmented.py  benchmark_seed_logreg.py  benchmark_seed_taxonomy_first.py  export_seed_litert_android.py  import_seed_reference.py  init_seed_label_queue.py  normalize_seed_reference.py  prepare_seed_augmented_dataset.py  train_seed_litert.py  train_seed_litert_attention.py  train_seed_litert_embed.py  train_seed_litert_embed_augmented.py  train_seed_logreg.py
tools/sms-ml/src/sms_ml/: __init__.py  augmented_datasets.py  benchmarking.py  categories.py  category_mapping.py  datasets.py  labeling.py  seed_dataset.py
tools/sms-ml/src/sms_ml/baselines/: __init__.py  current_regex.py  taxonomy_first.py
tools/sms-ml/src/sms_ml/models/: __init__.py  seed_litert.py  seed_litert_attention.py  seed_litert_embed.py  seed_logreg.py
tools/sms-ml/tests/: test_augmented_datasets.py  test_benchmarking.py  test_labeling.py  test_normalization.py  test_seed_litert.py  test_seed_litert_attention.py  test_seed_litert_embed.py  test_seed_logreg.py  test_smoke.py  test_taxonomy_first.py
(+491 files in other folders)
