[project]
name = "sms-parser-training"
version = "0.1.0"
description = "ML training pipeline for SMS transaction parser"
requires-python = ">=3.9"
dependencies = [
    "tensorflow>=2.13.0",
    "tensorflow-text>=2.13.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
python-downloads = "automatic"
