[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "expense-buddy-sms-ml"
version = "0.1.0"
description = "Offline training and evaluation workspace for Expense Buddy SMS categorization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pyright>=1.1.400",
  "pytest>=8.4.2",
  "ruff>=0.11.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sms_ml"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]